--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "animate.css": "^4.0.0",
+    "animate.css": "^4.1.0",
     "bootstrap": "^4.4.1",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.5",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
