--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactive",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://devkyo.github.io/reactive.pe",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -21,7 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "react-router-dom": "^5.1.2"
   }
 }
